--- a/doc/Bericht.tex
+++ b/doc/Bericht.tex
@@ -54,23 +54,13 @@ Für einen interessierten Hobby Meterologen der verschiedene Wetterdaten benöti
 Für das Betriebsystem haben wir uns folgenden Aufbau überlegt.Die oberste Schicht ist der Userprocess, in dem die Wetterapplikation und die Console laufen soll.Darunter liegen die Services z.B Filesys. Dazwischen ist die I/O API. Die nächste Schicht ist die Device Treiber Schicht, in denen befinden sich die ganzen Treiber für die Applikation und das Betriebsystem ( z.B SD Treiber, LED Treiber HDMI Treiber) als auch der Device Manager, der die ganzen Treiber steuert. In der vorletzten Schicht ist der Kernel untegebracht. In dem sitzt der Process manager der den Aufruf und das Beenden der Prozesse steuert.Außerdem noch Timer Driver, IPC, Scheduler, Virtueller Speicher. Die letzte Schicht ist die HAL ( Hardware Abstraction Layer)....
 
 
-\section{projektspezifische Meilensteine}
+\section{projektspezifische Module}
 
 \subsection{Context switch}
 \newpage
 \subsection{Interrupts}
 \newpage
-\subsection{MMU}
-Die Memory Management Unit wurde folgendermaßen implimentiert. 
-Im linkerfile Skript werden die Startaddresse des INT RAM und des EXT DDR definiert. Es werden eine L1 und eine L2 Tabelle verwendet. Die virtuelle Addresse wird folgendermaßen auf eine physikalische Addresse gemappt:\\
-\includegraphics[scale=0.5]{VirtuellerSpeicher.png} 
-
-Dabei werden die ersten 3 Hex-Zahlen für den Index in der L1 Tabelle verwendet.Der Inhalt der L1 Tabelle entspricht der Addresse der L2Tabelle. Die nächsten 2 Hex-Zahlen werden für den Index der L2 Tabelle verwendet. In Ihr steht die physikalische Addresse.\\
-Für die L1 Tabelle wurden section pages verwendet (1MB) und für die L2 Tabelle wurden small pages (4kB) verwendet.
-Interessanter Weise wurde nur 1 Domäne verwendet, deren AP Flags auf 11 gesetzt wurden. Das bedeutet das der man lesen und schreiben darf. Leider konnten wir nicht herausfinden warum andere AP Flags nicht funktionieren. Eigentlich sollten z.B AP Lags wie 01 den Zugriff einschränken und nur im Userprocess lesen dürfen, aber wir hatten keinen Zugriff mehr egal ob User oder Kernel Prozess.\\
-
-Der Kernel wird 1:1 in den INT bzw.EXT DDR RAM gemappt. Die Userprocesse wurden in den EXT DDR gemappt.
-\newpage
+\include{mmu}
 
 \subsection{Fat}
 
