changed doc structure

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -126,7 +126,7 @@ Betreuer: & Wolfgang Auer, Patrick Ritschel\\
 \section{Aufbau des Betriebsystems}
 
 	\begin{figure}[h]
-		\includegraphics[scale=0.5]{Aufbau.jpg}
+		\includegraphics[scale=0.5]{images/Aufbau.jpg}
 		\caption{Aufbau des Betriebssystems}
 		\label{fig01}
 	\end{figure}
